<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_sort_by"
        android:icon="@drawable/menu"
        app:showAsAction="ifRoom"
        android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_sort_by_popularity"
                    android:title="@string/action_sort_by_popularity" />
                <item android:id="@+id/action_sort_by_rating"
                    android:title="@string/action_sort_by_rating" />
                <item android:id="@+id/action_favorit"
                    android:title="@string/action_favorit_view"/>
            </group>
        </menu>
    </item>

</menu>