<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aliessa.movieapp.DetailsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/gradient_shadow_inverted"
        android:id="@+id/view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@color/bakgrounddetailsposter"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/imageViewBack"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/imageViewPoster"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageViewBack"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/imageViewPoster"
                    android:layout_toRightOf="@+id/imageViewPoster"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeLarge" />

                <TextView
                    android:id="@+id/textViewRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewName"
                    android:layout_marginTop="2.5dp"
                    android:layout_toEndOf="@+id/imageViewPoster"
                    android:layout_toRightOf="@+id/imageViewPoster"
                    android:text="@string/release_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall" />

                <Button
                    android:id="@+id/favrt"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_alignBottom="@+id/imageViewBack"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="14dp"
                    android:layout_marginEnd="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/backgrounddetailsrate"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textViewOverView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeNormal" />

                <TextView
                    android:id="@+id/textViewRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/textViewOverView"
                    android:padding="10dp"
                    android:text="@string/rating"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeLarge" />


            </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:padding="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/trailers"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeNormal"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="10dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/reviewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/review"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeNormal"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
            <LinearLayout
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"/>


        </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />


</FrameLayout>

